[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat~=0.2",
    "autogen-ext>=0.5.7",
    "groq>=0.25.0",
    "isort>=6.0.1",
    "langchain>=0.3.25",
    "langchain-core>=0.3.61",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langchain-mcp-adapters>=0.1.1",
    "langgraph>=0.4.7",
    "openai>=1.82.0",
    "pyautogen>=0.9",
    "python-dotenv>=1.1.0",
]
